--- a/stilprojektni.css
+++ b/stilprojektni.css
@@ -21,7 +21,7 @@ color:cadetblue;
 
 span {color: rgb(255, 0, 255);}
 body{
-	background-image: url("slike/projektnapozadina.jpg");
+	background-image: url("slike/projektnapozadina.JPG");
 }
 
 
